--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,18 @@
   },
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.3",
     "@codemirror/lang-python": "^6.1.7",
     "@codemirror/view": "^6.36.5",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.17",
+    "@uiw/codemirror-theme-dracula": "^4.23.10",
+    "@uiw/codemirror-theme-okaidia": "^4.23.10",
+    "@uiw/codemirror-theme-sublime": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
     "boring-avatars": "^1.11.2",
     "codemirror": "^5.65.19",
